--- a/app/src/main/res/layout/activity_actualizar_mascota_activty.xml
+++ b/app/src/main/res/layout/activity_actualizar_mascota_activty.xml
@@ -7,7 +7,7 @@
     android:background="@color/Color_principal"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".RegisterMascota">
+    tools:context=".ActualizarMascotaActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,19 +31,19 @@
             android:layout_weight="1"
             android:fontFamily="@font/quicksand_bold"
             android:gravity="center"
-            android:text="Registrar mascota"
+            android:text="Actualizar mascota"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/addButton"
+            android:id="@+id/updateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:enabled="true"
             android:fontFamily="@font/quicksand_bold"
-            android:text="Agregar"
+            android:text="Actualizar"
             android:textColor="@color/Color_Botton" />
     </LinearLayout>
 
