--- a/app/src/main/res/layout/activity_calendar_item.xml
+++ b/app/src/main/res/layout/activity_calendar_item.xml
@@ -46,7 +46,7 @@
             android:id="@+id/removeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#24526A"
+            android:backgroundTint="@android:color/holo_red_dark"
             android:text="Eliminar"
             android:fontFamily="@font/quicksand_bold" />
     </LinearLayout>
