--- a/app/src/main/res/layout/activity_calendar_item.xml
+++ b/app/src/main/res/layout/activity_calendar_item.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:orientation="vertical"
     android:padding="8dp">
@@ -40,7 +40,11 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#24526A"
             android:text="Editar"
-            android:fontFamily="@font/quicksand_bold" />
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/quicksand_bold"
+            app:icon="@drawable/ic_edit"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
 
         <Button
             android:id="@+id/removeButton"
@@ -48,7 +52,11 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/holo_red_dark"
             android:text="Eliminar"
-            android:fontFamily="@font/quicksand_bold" />
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/quicksand_bold"
+            app:icon="@drawable/ic_delete"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
     </LinearLayout>
 
 </LinearLayout>
