--- a/app/src/main/res/layout/activity_actualizar_mascota_activty.xml
+++ b/app/src/main/res/layout/activity_actualizar_mascota_activty.xml
@@ -37,7 +37,7 @@
             android:gravity="center"
             android:text="Actualizar mascota"
             android:textColor="@android:color/black"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <Button
@@ -49,10 +49,10 @@
             android:fontFamily="@font/quicksand_bold"
             android:text="Actualizar"
             android:textColor="@color/Color_Botton"
-            app:icon="@drawable/ic_update"
+            android:drawableLeft="@drawable/ic_add"
             app:iconTint="@color/black"
             app:iconGravity="textStart"
-            app:iconPadding="8dp" />
+ />
     </LinearLayout>
 
     <TextView
@@ -75,8 +75,7 @@
         android:inputType="text"
         android:padding="12dp"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:drawableStart="@drawable/ic_name" />
+        android:textSize="16sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -86,7 +85,7 @@
         android:text="Especie"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        app:drawableStart="@drawable/ic_species" />
+        />
 
     <Spinner
         android:id="@+id/tipo_mascota"
@@ -96,7 +95,7 @@
         android:fontFamily="@font/quicksand_regular"
         android:minHeight="48dp"
         android:paddingVertical="12dp"
-        app:drawableStart="@drawable/ic_species_spinner" />
+         />
 
     <TextView
         android:layout_width="match_parent"
