--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -21,7 +21,7 @@
         app:icon="@drawable/ic_salir"
         app:iconGravity="textStart"
         app:iconPadding="8dp"
-        app:iconTint="@android:color/red"/>
+        app:iconTint="@android:color/holo_red_dark"/>
 
 
     <TextView
