--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -28,8 +28,6 @@
         android:textColor="@color/black"
         android:textSize="24sp" />
 
-
-
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
@@ -42,7 +40,8 @@
         android:padding="12dp"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:drawableStart="@drawable/ic_email"/>
+        android:drawableStart="@drawable/ic_email"
+        android:maxLength="50"/>
 
     <EditText
         android:id="@+id/etPassword"
@@ -56,7 +55,8 @@
         android:padding="12dp"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:drawableStart="@drawable/ic_lock"/>
+        android:drawableStart="@drawable/ic_lock"
+        android:maxLength="30"/>
 
     <EditText
         android:id="@+id/etCPassword"
@@ -70,7 +70,8 @@
         android:padding="12dp"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:drawableStart="@drawable/ic_lock"/>
+        android:drawableStart="@drawable/ic_lock"
+        android:maxLength="30"/>
 
     <TextView
         android:id="@+id/tvError"
